--- a/index.html
+++ b/index.html
@@ -6,11 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Marco Villanueva Resume</title>
 </head>
 
 <body>
-
+  <header>
+    <div id="name"></div>
+    <div id="contact-info">
+    </div>
+    <main>
+      <section>
+        <h1>Marco Villanueva</h1>
+        <ul>
+          <li>Boise, ID</li>
+          <li>villanuevamarco98@gmail.com</li>
+          <li>github.com/MarcoVillanueva</li>
+          <li>5555555555</li>
+        </ul>
+      </section>
+      <section>
+        <h1>Professional Summary</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sed, ullam enim doloremque fugit similique
+          odit? Facilis eaque voluptatum ipsum ab aperiam tenetur quibusdam? Molestias asperiores aperiam accusamus
+          inventore et.</p>
+      </section>
+      <section id="skills">
+        <h1>Skills</h1>
+        <ul>
+          <li>Karate</li>
+          <li>Cooking</li>
+          <li>Breakdancing</li>
+          <li>Tomfoolery</li>
+        </ul>
+      </section>
+      <section>
+        <h1>Work history</h1>
+        <div class="job">
+          <p><b>JOB TITLE</b>, Dates of Employment</p>
+          <p><b>Company</b>-</p>
+        </div>
+        <div class="job">
+          <h1></h1>
+        </div>
+      </section>
+      <section>
+        <h1>Education</h1>
+        <div class="education">
+          <h4><b>DEGREE</b>-School Name</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda vitae sequi eligendi quaerat, sit
+            debitis mollitia nobis ipsam explicabo voluptates labore minima hic ipsum, voluptatem sed cupiditate quam
+            vero error?</p>
+        </div>
+        <div class="education"></div>
+        <div class="educaiton"></div>
+      </section>
+    </main>
+    <footer></footer>
+  </header>
 </body>
 
 </html>
